--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ php:
  
 before_install:
   - wget https://www.dropbox.com/s/v58248y87cc8wsc/hp4m-installer-1.51.01.2371.tar.gz?dl=0 && ls
+install:
+  - ls
 script: phpunit Test.php
